--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,10 @@
 FROM node:20
 
-WORKDIR /usr/src/app
+WORKDIR /app/server
 
 COPY package.json ./
 
+RUN rm -rf /app/server/node_modules
 RUN npm install
 
 COPY . .
