--- a/package.json
+++ b/package.json
@@ -44,8 +44,9 @@
     "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.508.0",
+    "mongod": "^2.0.0",
     "mongodb": "^6.16.0",
-    "mongoose": "^8.14.1",
+    "mongoose": "^8.14.3",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
@@ -56,9 +57,7 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "vaul": "^1.1.2",
-    "zod": "^3.24.4",
-    "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.16.0"
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
