--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "cd backend && npm run start:dev",
+    "setup:postgres": "docker-compose -f docker-compose.yml up -d"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
