Remoed API endpoints and server to isolate it into different branch.

--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "server": "cd backend && npm run start:dev",
-    "setup:postgres": "docker-compose -f docker-compose.yml up -d"
+    "lint": "next lint"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
