--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-DATABASE_URL="postgresql://user:password@localhost:5431/template_db?schema=public"
+DATABASE_URL="postgresql://testuser:testuser@localhost:5432/skilltree?schema=public"
 JWT_SECRET="supersecretkey"
