refactor(all): remove Verification model and related fields; add name field to Event model; edited env variable files.

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
-DATABASE_URL="postgresql://testuser:testuser@localhost:5432/skilltree?schema=public"
+DATABASE_URL=postgresql://user:user@localhost:5432/skilltree
 JWT_SECRET="supersecretkey"
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=user
+DB_PASSWORD=user
+DB_NAME=skilltree
