--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "mongoose": "^8.14.3",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
+    "pnpm": "^10.11.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
